--- a/tusnad.html
+++ b/tusnad.html
@@ -11,7 +11,7 @@
 
 <div class="top">
 	<div class="header">
-		<label class="lab1">Baile <span>Cojocna</span></label>
+		<label class="lab1">Baile <span>Tuşnad</span></label>
 	</div>
 	<nav class="navi">
 		<a href="tusnad.html">Home</a>
